# bestfps-website

./: README.md  db.js  package-lock.json  package.json  playwright.config.js  server.js
data/: bestfps.db  bestfps.db-shm  bestfps.db-wal
email/: sender.js
hwid-agent/: ACCEPTANCE.md  README.md  bestfps-hwid.js  bestfps-hwid.ps1  build-windows.js  verify-cpp-delivery.js
hwid-agent-cpp/: README.md  build.bat
hwid-agent-cpp/src/: console.cpp  console.h  crypto.cpp  crypto.h  hardware.cpp  hardware.h  json.cpp  json.h  main.cpp  network.cpp  network.h
middleware/: admin.js  auth.js  cache.js  csrf.js  rateLimiter.js  validator.js
public/: admin.html  change-email.html  dashboard.html  forgot-password.html  index.html  login.html  pricing.html  privacy.html  register.html  reset-password.html  script.js  sessions.html  settings.html  share-view.html  style.css  terms.html
public/css/: auth.css  components.css  dashboard.css  landing.css  themes.css
public/js/admin/: admin-announcements.js  (+7 more)
routes/: admin.js  announcements.js  auth.js  downloads.js  hwid.js  invoices.js  presets.js  settings.js  share.js  sync.js
routes/auth/: account.js  email.js  password.js  profile.js  sessions.js  utils.js
shared/: constants.js
tests/: admin.test.js  announcements.test.js  appFactory.js  auth.test.js  db-wrapper.test.js  helpers.js  hwid.test.js  presets.test.js  server-pages.test.js  settings.test.js  setup.js  share.test.js  sync.test.js
tests/performance/: dashboard.spec.js
tools/hwid-agent/: README.md  build-windows.ps1
tools/hwid-agent-cpp/: CMakeLists.txt
(+37 files in other folders)
